# stopmotionsoftware

./: CMakeLists.txt  CanadianExperienceApp.cpp  CanadianExperienceApp.h  CanadianExperienceIcon.icns  Doxyfile.doxy  FINAL.anim  README.md  main.cpp  pch.h
CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  AnimChannel.h  AnimChannelAngle.cpp  AnimChannelAngle.h  AnimChannelPoint.cpp  AnimChannelPoint.h  CMakeLists.txt  Drawable.cpp  Drawable.h  HaroldFactory.cpp  HaroldFactory.h  HeadTop.cpp  HeadTop.h  ImageDrawable.cpp  ImageDrawable.h  MachineDrawable.cpp  MachineDrawable.h  MachineFactory.cpp  MachineFactory.h  MachineFrameDlg.cpp  MachineFrameDlg.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PictureObserver.cpp  PictureObserver.h  PolyDrawable.cpp  PolyDrawable.h  RotatedBitmap.cpp  RotatedBitmap.h  SpartyFactory.cpp  SpartyFactory.h  Timeline.cpp  Timeline.h  TimelineDlg.cpp  (+6 more)
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  README.md  main.cpp  pch.h
MachineLib/: AirReceiver.cpp  AirReceiver.h  AirSink.cpp  AirSink.h  AirSource.cpp  AirSource.h  CMakeLists.txt  CardReader.cpp  CardReader.h  ClampPoint.cpp  ClampPoint.h  Component.cpp  Component.h  Cylinder.cpp  Cylinder.h  Instrument.cpp  Instrument.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineDialog.cpp  MachineDialog.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystem.h  MachineSystemActual.cpp  MachineSystemActual.h  MachineSystemFactory.cpp  MachineSystemFactory.h  Pipe.cpp  Pipe.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  StruckInstrument.cpp  (+4 more)
MachineLib/include/: machine-api.h
MachineTests/: CMakeLists.txt  MachineTest.cpp
Tests/: ActorTest.cpp  AnimChannelAngleTest.cpp  CMakeLists.txt  DrawableTest.cpp  ImageDrawableTest.cpp  PictureObserverTest.cpp  PictureTest.cpp  PolyDrawableTest.cpp  TimelineTest.cpp  gtest_main.cpp
resources/: CanadianExperience.rc
resources/xrc/: main.fbp  main.xrc
